--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+4
+  ddp: ^0.0.9
+  crypto: ^2.0.6
+  json_annotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.2.7
+  json_serializable: ^2.0.2
 
 
 # For information on the generic Dart part of this file, see the
